# iden-challenge

./: .gitignore  README.md  pyproject.toml
data/: products.json  session.json
scripts/: exceptions.py  iden_challenge.py
src/iden_playwright/: __init__.py
