[project]
name = "iden-playwright"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hemanth-kumar-j", email = "hemanth@nitimis.com" }
]
dependencies = [
    "playwright>=1.51.0",
    "black>=25.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/iden_playwright"]
